tests/classes/inheritance/inheritedshadowself.no.test/B.java
public class B extends A {
    public B m() {
        return this; // error
    }
}
